# cdn_scrum_vision

./: games_opt.min.json  mypy.ini  package.json  pydocstyle.ini  pyproject.toml  setup.cfg  setup.py
databases/: categories.json  clean_words.json  modalities.json  teams.json  tournaments.json
src/: main.py
src/notebooks/: main.ipynb  main.py  parse_teams.py
src/utils/: data_clean.py  data_normalize.py  data_optimize.py  file_system.py  get_info.py  get_videos.py  parse_time.py  variables.py
